// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query 1`] = `
Array [
  Object {
    "字": "",
    "读": Object {
      "IPA": Object {
        "声": "tʂ",
        "音": "tʂoŋ",
        "韵": "oŋ",
      },
      "XPA": Object {
        "声": "zh",
        "音": "zhong",
        "韵": "ong",
      },
      "format": [Function],
      "toIPA": [Function],
      "toXPA": [Function],
    },
    "调": Object {
      "调值": 33,
      "调号": 1,
      "调名": "阴平",
      "调序": 1,
      "调符": "˧˧",
    },
    "释": "",
  },
  Object {
    "字": "",
    "读": Object {
      "IPA": Object {
        "声": "tʂ",
        "音": "tʂoŋ",
        "韵": "oŋ",
      },
      "XPA": Object {
        "声": "zh",
        "音": "zhong",
        "韵": "ong",
      },
      "format": [Function],
      "toIPA": [Function],
      "toXPA": [Function],
    },
    "调": Object {
      "调值": 55,
      "调号": 5,
      "调名": "阴去",
      "调序": 4,
      "调符": "˥˥",
    },
    "释": "",
  },
]
`;

exports[`query 2`] = `
Array [
  Object {
    "字": "",
    "读": Object {
      "IPA": Object {
        "声": "",
        "音": "i",
        "韵": "i",
      },
      "XPA": Object {
        "声": "",
        "音": "i",
        "韵": "i",
      },
      "format": [Function],
      "toIPA": [Function],
      "toXPA": [Function],
    },
    "调": Object {
      "调值": 41,
      "调号": 3,
      "调名": "上声",
      "调序": 3,
      "调符": "˦˩",
    },
    "释": "",
  },
]
`;
